--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Dairy</title>
+    <title>Diary</title>
     <style>
         body {
                 background-color: rgb(255, 255, 255);
@@ -14,8 +14,10 @@
             }
         h1 {text-align: center;}
         h5 {text-align: center;}
-        table, th, td{
+        table, td, th{
             border: 1px solid;
+            text-align: center;
+            width:1400px;
         }
 
         th {
@@ -35,7 +37,7 @@
             <table>
                 <tr>
                     <th>Enter Text</th>
-                    <th>Sign in</th>
+                    <th><button type = "button">Sign in</button></th>
                 </tr>
             </table>
         </main>
