--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             <h5>No sign up required</h5>
         </header>
         <main>
+            <!--Add the Datea to where the button link is-->
             <table>
                 <tr>
                     <th>Enter Text</th>
-                    <th><button type = "button">Sign in</button></th>
+                    <th><button type = "button"><a href = "userWebPage.html">Sign in</a></button></th>
                 </tr>
             </table>
         </main>
