--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!--Add the Datea to where the button link is-->
             <table>
                 <tr>
-                    <th>Enter Text</th>
+                    <th><input type = "text"></th>
                     <th><button type = "button"><a href = "userWebPage.html">Sign in</a></button></th>
                 </tr>
             </table>
