--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <footer>
             <!--
                 &copy; Emma Devens - Fall 2023
-                Andrew
+                &copy; Andrew  - Fall 2023
             -->
         </footer>
     </body>
