--- a/userWebPage.html
+++ b/userWebPage.html
@@ -9,9 +9,7 @@
     <body>
         <header>
             <nav>
-                <ul>
-                    <li><a href = "index.html">Back to Sign in</a></li>
-                </ul>
+                <a href = "index.html">Back to Sign in</a>
             </nav>
         </header>
         <main>
@@ -19,7 +17,7 @@
         <footer>
             <!--
                 &copy; Emma Devens - Fall 2023
-                Andrew
+                &copy; Andrew
             -->
         </footer>
     </body>
