--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             }
         h1 {text-align: center;}
         h5 {text-align: center;}
+        /*
         table, td, th{
             border: 1px solid;
             text-align: center;
@@ -27,7 +28,7 @@
             vertical-align: center;
             height: 50px;
         }
-
+        */
     </style>
 </head>
     <body>
@@ -37,12 +38,19 @@
         </header>
         <main>
             <!--Add the Datea to where the button link is-->
+            <!--
             <table>
                 <tr>
                     <th><input type = "text"></th>
                     <th><button type = "button"><a href = "userWebPage.html">Sign in</a></button></th>
                 </tr>
             </table>
+            -->
+            <form>
+                <label for= "Sign in">Enter Username:</label>
+                <input type = "text">
+                <button type = "button">Sign in</button>
+            </form>
         </main>
         <footer>
             <!--
