Convert index.html to use php form submission

--- a/index.html
+++ b/index.html
@@ -46,10 +46,16 @@
                 </tr>
             </table>
             -->
-            <form>
+            <form action=”login.php” method=”post”>
+                Username: <input type=”text” name=”username”><br>
+                Password: <input type=”text” name="password"><br>
+                <input type="submit">
+                
+                <!--
                 <label for= "Sign in">Enter Username:</label>
                 <input type = "text">
                 <button type = "button">Sign in</button>
+                -->
             </form>
         </main>
         <footer>
