--- a/questions.html
+++ b/questions.html
@@ -9,12 +9,70 @@
     <body>
         <header>
             <nav>
-                <ul>
-                    <li><a href = "index.html">Back to Sign in</a></li>
-                </ul>
+                <a href = "index.html">Back to Sign in</a>
             </nav>
         </header>
         <main>
+            <section id = rating_questions>
+                <p>1. How are you feeling today, with 10 being amazing, and 1 being the worst: </p>
+                <form>
+                    <input type="radio" id="10" name="feeling_today" value = "10">
+                    <label for="10">10</label><br>
+                    <input type="radio" id="9" name="feeling_today" value="9">
+                    <label for="9">9</label><br>
+                    <input type="radio" id="8" name="feeling_today" value="8">
+                    <label for="8">8</label><br>
+                    <input type="radio" id="7" name="feeling_today" value = "7">
+                    <label for="7">7</label><br>
+                    <input type="radio" id="6" name="feeling_today" value="6">
+                    <label for="6">6</label><br>
+                    <input type="radio" id="5" name="feeling_today" value="5">
+                    <label for="5">5</label><br>
+                    <input type="radio" id="4" name="feeling_today" value = "4">
+                    <label for="4">4</label><br>
+                    <input type="radio" id="3" name="feeling_today" value="3">
+                    <label for="3">3</label><br>
+                    <input type="radio" id="2" name="feeling_today" value="2">
+                    <label for="2">2</label><br>
+                    <input type="radio" id="1" name="feeling_today" value="1">
+                    <label for="1">1</label><br>
+                </form>
+                
+                <p>2. How do you feel like today went, with 10 being the most productive you have been so far, and 1 being you barely/never left your bed: </p>
+                <form>
+                    <input type="radio" id="10" name="feeling_today" value = "10">
+                    <label for="10">10</label><br>
+                    <input type="radio" id="9" name="feeling_today" value="9">
+                    <label for="9">9</label><br>
+                    <input type="radio" id="8" name="feeling_today" value="8">
+                    <label for="8">8</label><br>
+                    <input type="radio" id="7" name="feeling_today" value = "7">
+                    <label for="7">7</label><br>
+                    <input type="radio" id="6" name="feeling_today" value="6">
+                    <label for="6">6</label><br>
+                    <input type="radio" id="5" name="feeling_today" value="5">
+                    <label for="5">5</label><br>
+                    <input type="radio" id="4" name="feeling_today" value = "4">
+                    <label for="4">4</label><br>
+                    <input type="radio" id="3" name="feeling_today" value="3">
+                    <label for="3">3</label><br>
+                    <input type="radio" id="2" name="feeling_today" value="2">
+                    <label for="2">2</label><br>
+                    <input type="radio" id="1" name="feeling_today" value="1">
+                    <label for="1">1</label><br>
+                </form>
+
+            </section>
+            <section id = basic_questions>
+                <form>
+
+                </form>
+            </section>
+            <section id = written_questions>
+                <form>
+
+                </form>
+            </section>
         </main>
         <footer>
             <!--
