index.html standardize quotations

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 </tr>
             </table>
             -->
-            <form action=”login.php” method=”post”>
-                Username: <input type=”text” name=”username”><br>
-                Password: <input type=”text” name="password"><br>
+            <form action="login.php" method="post">
+                Username: <input type="text" name="username"><br>
+                Password: <input type="text" name="password"><br>
                 <input type="submit">
                 
                 <!--
