This is an update

--- a/questions.html
+++ b/questions.html
@@ -13,7 +13,8 @@
             </nav>
         </header>
         <main>
-            <section id = rating_questions>
+            <!--Questions 1 - 3 -->
+            <section id = rating_questions_one_thru_ten>
                 <p>1. How are you feeling today, with 10 being amazing, and 1 being the worst: </p>
                 <form>
                     <input type="radio" id="10" name="feeling_today" value = "10">
@@ -62,6 +63,64 @@
                     <label for="1">1</label><br>
                 </form>
 
+                <p>3. How stressful did you feel today, with 10 being not at all, and 1 being very stressed all day long: </p>
+                <form>
+                    <input type="radio" id="10" name="feeling_today" value = "10">
+                    <label for="10">10</label><br>
+                    <input type="radio" id="9" name="feeling_today" value="9">
+                    <label for="9">9</label><br>
+                    <input type="radio" id="8" name="feeling_today" value="8">
+                    <label for="8">8</label><br>
+                    <input type="radio" id="7" name="feeling_today" value = "7">
+                    <label for="7">7</label><br>
+                    <input type="radio" id="6" name="feeling_today" value="6">
+                    <label for="6">6</label><br>
+                    <input type="radio" id="5" name="feeling_today" value="5">
+                    <label for="5">5</label><br>
+                    <input type="radio" id="4" name="feeling_today" value = "4">
+                    <label for="4">4</label><br>
+                    <input type="radio" id="3" name="feeling_today" value="3">
+                    <label for="3">3</label><br>
+                    <input type="radio" id="2" name="feeling_today" value="2">
+                    <label for="2">2</label><br>
+                    <input type="radio" id="1" name="feeling_today" value="1">
+                    <label for="1">1</label><br>
+                </form>
+            </section>
+            <!--Questions 4 - idk -->
+            <section id =rating_questions_varying>
+                <p>4. About how many hours of sleep did you get last night? </p>
+                <form>
+                    <input type="radio" id="0" name="sleep" value="0">
+                    <label for="0">All nighter/ Still haven't slept yet</label><br>
+                    <input type="radio" id="1-3" name="sleep" value="1-3">
+                    <label for="1-3">1 to 3 hours</label><br>
+                    <input type="radio" id="4-7" name="sleep" value="4-7">
+                    <label for="4-7">4 to 7 hours</label><br>
+                    <input type="radio" id="8-10" name="sleep" value="8-10">
+                    <label for="8-10">8 to 10 hours</label><br>
+                    <input type="radio" id="10" name="sleep" value="10+">
+                    <label for="10+">10+ hours</label><br>
+                </form>
+                <p>5. What was the weather like today?</p>
+                <form>
+                    <input type="checkbox" id="idk" name="weather" value="idk">
+                    <label for="idk">I don't know, I have not been or looked outside today</label><br>
+                    <input type="checkbox" id="sunny" name="weather" value="sunny">
+                    <label for="sunny">It was bright and sunny out</label><br>
+                    <input type="checkbox" id="cloudy" name="weather" value="cloudy">
+                    <label for="cloudy">It was cloudy out today</label><br>
+                    <input type="checkbox" id="dark" name="weather" value="dark">
+                    <label for="dark">It was gloomy/dark out today</label><br>
+                    <input type="checkbox" id="snowy" name="weather" value="snowy">
+                    <label for="snowy">It was snowy outside today</label><br>
+                    <input type="checkbox" id="humid" name="weather" value="humid">
+                    <label for="humid">It was humid outside today</label><br>
+                    <input type="checkbox" id="warm" name="weather" value="warm">
+                    <label for="war,">It was warm outside today, not too hot</label><br>
+                    <input type="checkbox" id="hot" name="weather" value="hot">
+                    <label for="hot">It was hot outside today, very hot</label><br>
+                </form>
             </section>
             <section id = basic_questions>
                 <form>
