Final first draft

--- a/questions.html
+++ b/questions.html
@@ -120,16 +120,43 @@
                     <label for="war,">It was warm outside today, not too hot</label><br>
                     <input type="checkbox" id="hot" name="weather" value="hot">
                     <label for="hot">It was hot outside today, very hot</label><br>
+                    <input type="checkbox" id="chilly" name="weather" value="chilly">
+                    <label for="chily">It was chily outside </label><br>
+                    <input type="checkbox" id="cold" name="weather" value="cold">
+                    <label for="cold">It was cold outside today, very cold</label><br>
                 </form>
             </section>
+            <!--Questions 6- unknown-->
             <section id = basic_questions>
+                <p>6. How long did you exercise for, and what type did you do?</p>
                 <form>
-
+                    <input type="text" name="exercise"><br>
                 </form>
-            </section>
-            <section id = written_questions>
+                <p>7. What is one good thing that happened to you today, or one good thing 
+                    that you did today
+                </p>
                 <form>
+                    <input type="text" name="good_things"><br>
+                </form>
+                <p>8. How many times did you eat? What did you eat?</p>
+                <form>
+                    <input type="text" name="healthy_eating"><br>
+                </form>
+                <p>9. How could you have made today even better?</p>
+                <form>
+                    <input type="text" name="improvement"><br>
+                </form>
 
+            </section>
+            <!--Question 10 only-->
+            <section id = written_questions>
+                <p>10. Please write any additonal information you would like to this text box.
+                    Information can be, additonal information to the questions asked above, a goal you have completed, 
+                    a goal you wish to acomplish for tomorrow. Maybe something to help your future self out, or a new 
+                    thing you learned today. You can add anything in here, and can review it later.
+                </p>
+                <form>
+                    <input type="text" name="comments"><br>
                 </form>
             </section>
         </main>
