--- a/userWebPage.html
+++ b/userWebPage.html
@@ -17,7 +17,7 @@
         <footer>
             <!--
                 &copy; Emma Devens - Fall 2023
-                &copy; Andrew
+                &copy; Andrew Niebur - Fall 2023
             -->
         </footer>
     </body>
