--- a/questions.html
+++ b/questions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Diary</title>
+    <title>Diary Questions</title>
     <style>
     </style>
 </head>
