--- a/viewSubmissions.html
+++ b/viewSubmissions.html
@@ -13,12 +13,11 @@
             </nav>
         </header>
         <main>
+            
         </main>
-        <footer>
-            <!--
-                &copy; Emma Devens - Fall 2023
-                &copy; Andrew
-            -->
+        <footer>               
+            &copy; Emma Devens - Fall 2023
+            &copy; Andrew Niebur - Fall 2023
         </footer>
     </body>
 </html>
