--- a/viewSubmissions.html
+++ b/viewSubmissions.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <title>Diary</title>
     <style>
+        table, td, th{
+            border: 1px solid;
+            text-align: center;
+            width:1470px;
+            height:50px;
+        }
     </style>
 </head>
     <body>
@@ -13,7 +19,39 @@
             </nav>
         </header>
         <main>
-            
+            <section id="emoji_codes">
+                <p>The ratings used in the chart below are below, and are based off the rating 
+                    given to the question, 'How are you feeling today.'
+                </p>
+                <ul>
+                    <li>&#127881 is for a rating 10 - 9</li>
+                    <li>&#128513 is for a rating 8 - 7</li>
+                    <li>&#128528 is for a rating 6 - 5</li>
+                    <li>&#128532 is for a rating 4 - 3</li>
+                    <li>&#128534 is for a rating 2 - 1</li>
+                </ul>
+            </section>
+            <table>
+                <caption>Past 14 Days</caption>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>   
         </main>
         <footer>               
             &copy; Emma Devens - Fall 2023
