--- a/questions.html
+++ b/questions.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <nav>
-                <a href = "index.html">Back to Sign in</a>
+                <a href = "login.html">Back to Sign in</a>
             </nav>
         </header>
         <main>
