--- a/viewSubmissions.html
+++ b/viewSubmissions.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <nav>
-                <a href = "index.html">Back to Sign in</a>
+                <a href = "login.html">Back to Sign in</a>
             </nav>
         </header>
         <main>
