--- a/login.html
+++ b/login.html
@@ -7,12 +7,12 @@
     <title>Diary</title>
     <style>
         body {
-                background-color: rgb(255, 255, 255);
-                font-family:'Times New Roman', Times, serif;
+                background-color: rgb(110, 243, 255);
+                font-family: Georgia, 'Times New Roman', Times, serif;
                 font-size: 2em;
             }
             header {
-                background-color: rgba(255, 255, 255);
+                background-color: rgba(110, 243, 255);
             }
         h1 {text-align: center;}
         h3 {text-align: center;}
@@ -70,10 +70,10 @@
 
         </main>
         <footer>
-            
-            &copy; Emma Devens - Fall 2023
-            &copy; Andrew Niebur - Fall 2023
-        
+           <h6> 
+                &copy; Emma Devens - Fall 2023
+                &copy; Andrew Niebur - Fall 2023
+            </h6>
         </footer>
     </body>
 </html>
