Initial work on integrating questions.html with php

--- a/questions.html
+++ b/questions.html
@@ -16,7 +16,7 @@
             <!--Questions 1 - 3 -->
             <section id = rating_questions_one_thru_ten>
                 <p>1. How are you feeling today, with 10 being amazing, and 1 being the worst: </p>
-                <form form action="viewSubmissions.php" method="post">
+                <form form action="submit_diary.php" method="post">
                     <input type="radio" id="10" name="feeling_today" value = "10">
                     <label for="10">10</label><br>
                     <input type="radio" id="9" name="feeling_today" value="9">
@@ -41,49 +41,49 @@
                 
                 <p>2. How do you feel like today went, with 10 being the most productive you have been so far, and 1 being you barely/never left your bed: </p>
                 <form form action="viewSubmissions.php" method="post">
-                    <input type="radio" id="10" name="feeling_today" value = "10">
+                    <input type="radio" id="10" name="productivity" value = "10">
                     <label for="10">10</label><br>
-                    <input type="radio" id="9" name="feeling_today" value="9">
+                    <input type="radio" id="9" name="productivity" value="9">
                     <label for="9">9</label><br>
-                    <input type="radio" id="8" name="feeling_today" value="8">
+                    <input type="radio" id="8" name="productivity" value="8">
                     <label for="8">8</label><br>
-                    <input type="radio" id="7" name="feeling_today" value = "7">
+                    <input type="radio" id="7" name="productivity" value = "7">
                     <label for="7">7</label><br>
-                    <input type="radio" id="6" name="feeling_today" value="6">
+                    <input type="radio" id="6" name="productivity" value="6">
                     <label for="6">6</label><br>
-                    <input type="radio" id="5" name="feeling_today" value="5">
+                    <input type="radio" id="5" name="productivity" value="5">
                     <label for="5">5</label><br>
-                    <input type="radio" id="4" name="feeling_today" value = "4">
+                    <input type="radio" id="4" name="productivity" value = "4">
                     <label for="4">4</label><br>
-                    <input type="radio" id="3" name="feeling_today" value="3">
+                    <input type="radio" id="3" name="productivity" value="3">
                     <label for="3">3</label><br>
-                    <input type="radio" id="2" name="feeling_today" value="2">
+                    <input type="radio" id="2" name="productivity" value="2">
                     <label for="2">2</label><br>
-                    <input type="radio" id="1" name="feeling_today" value="1">
+                    <input type="radio" id="1" name="productivity" value="1">
                     <label for="1">1</label><br>
                 </form>
 
                 <p>3. How stressful did you feel today, with 10 being not at all, and 1 being very stressed all day long: </p>
                 <form form action="viewSubmissions.php" method="post">
-                    <input type="radio" id="10" name="feeling_today" value = "10">
+                    <input type="radio" id="10" name="feeling_stressed" value = "10">
                     <label for="10">10</label><br>
-                    <input type="radio" id="9" name="feeling_today" value="9">
+                    <input type="radio" id="9" name="feeling_stressed" value="9">
                     <label for="9">9</label><br>
-                    <input type="radio" id="8" name="feeling_today" value="8">
+                    <input type="radio" id="8" name="feeling_stressed" value="8">
                     <label for="8">8</label><br>
-                    <input type="radio" id="7" name="feeling_today" value = "7">
+                    <input type="radio" id="7" name="feeling_stressed" value = "7">
                     <label for="7">7</label><br>
-                    <input type="radio" id="6" name="feeling_today" value="6">
+                    <input type="radio" id="6" name="feeling_stressed" value="6">
                     <label for="6">6</label><br>
-                    <input type="radio" id="5" name="feeling_today" value="5">
+                    <input type="radio" id="5" name="feeling_stressed" value="5">
                     <label for="5">5</label><br>
-                    <input type="radio" id="4" name="feeling_today" value = "4">
+                    <input type="radio" id="4" name="feeling_stressed" value = "4">
                     <label for="4">4</label><br>
-                    <input type="radio" id="3" name="feeling_today" value="3">
+                    <input type="radio" id="3" name="feeling_stressed" value="3">
                     <label for="3">3</label><br>
-                    <input type="radio" id="2" name="feeling_today" value="2">
+                    <input type="radio" id="2" name="feeling_stressed" value="2">
                     <label for="2">2</label><br>
-                    <input type="radio" id="1" name="feeling_today" value="1">
+                    <input type="radio" id="1" name="feeling_stressed" value="1">
                     <label for="1">1</label><br>
                 </form>
             </section>
