--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
                 background-color: rgba(110, 243, 255);
             }
         h1 {text-align: center;}
+        h2 {text-align: center;}
         h3 {text-align: center;}
         h5 {text-align: center;}
         /*
