--- a/decision_page.html
+++ b/decision_page.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8">
     <title>Decision Page</title>
     <style>
+        body {
+                background-color: rgb(110, 243, 255);
+                font-family: Georgia, 'Times New Roman', Times, serif;
+                font-size: 1em;
+            }
+        table, td, th, tr {
+            background-color: white;
+        }
     </style>
 </head>
     <body>
