--- a/about_page.html
+++ b/about_page.html
@@ -28,7 +28,7 @@
                 <h2>About this Product</h2>
                 <p>This product is used to help individuals track their emotional, physical, and mental health. 
                     It lets people create and sign in to their own account for free. It also lets them track how they 
-                    were, and how they felt the day was at the end of the day. Individuals are asked a list of 
+                    were, and how they felt the day was at the end of the day. Individuals are asked a list of guiding 
                     questions that helps track their health,
                     as well as a final question where they can add an facts or comments that they want to add about the day, but were not 
                     able to add because of the previous questions asked. Users are also able to look at pervious days 
