--- a/viewSubmissions.html
+++ b/viewSubmissions.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Diary</title>
     <style>
+        body {
+                background-color: rgb(110, 243, 255);
+                font-family: Georgia, 'Times New Roman', Times, serif;
+                font-size: 1em;
+            }
         table, td, th{
             border: 1px solid;
             text-align: center;
