--- a/viewSubmissions.html
+++ b/viewSubmissions.html
@@ -14,6 +14,7 @@
             text-align: center;
             width:1470px;
             height:50px;
+            background-color: white;
         }
     </style>
 </head>
