--- a/questions.html
+++ b/questions.html
@@ -1,3 +1,6 @@
+<?php
+session_start();
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,8 +23,6 @@
         <main>
             <form form action="submit_diary.php" method="post">
             <!--Questions 1 - 3 -->
-            <p>Enter your username:</p>
-            <input type="text" name="username"><br>
             <p>Enter today's date, in MM-DD-YYYY format:</p>
             <input type="text" name="date"><br>
             <section id = rating_questions_one_thru_ten>
