--- a/login.html
+++ b/login.html
@@ -40,6 +40,9 @@ session_start();
         <header>
             <h1>Login in</h1>
             <!-- <h5>No sign up required</h5> -->
+            <nav>
+                <a href = "login.html">Sign in</a><br>
+            </nav>
         </header>
         <main>
             <!--Add the Datea to where the button link is-->
