--- a/viewSubmissions.html
+++ b/viewSubmissions.html
@@ -24,7 +24,8 @@ session_start();
     <body>
         <header>
             <nav>
-                <a href = "login.html">Back to Sign in</a>
+                <a href = "login.html">Back to Sign in</a><br>
+                <a href = "about_page.html" target = "_blank">About page</a>
             </nav>
         </header>
         <main>
