More link updates

--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@ session_start();
             <h1>Login in</h1>
             <!-- <h5>No sign up required</h5> -->
             <nav>
-                <a href = "login.html">Sign in</a><br>
+                <a href = "about_page.html">About page</a><br>
             </nav>
         </header>
         <main>
