--- a/questions.html
+++ b/questions.html
@@ -18,7 +18,8 @@ session_start();
         <header>
             <nav>
                 <a href = "login.html">Back to Sign in</a><br>
-                <a href = "about_page.html" target = "_blank">About page</a>
+                <a href = "about_page.html" target = "_blank">About page</a><br>
+                <a href = "decision_page.html">Decision page</a><br>
             </nav>
         </header>
         <main>
