--- a/viewSubmissions.html
+++ b/viewSubmissions.html
@@ -62,7 +62,13 @@ session_start();
                     <td></td>
                     <td></td>
                 </tr>
-            </table>   
+            </table>
+            <h3>Enter a date to search for previous entries</h3>
+            <!--I don't know what action to have-->
+            <form action="" method="post">
+                Enter Date: <input type="text" name="username">
+                <input type="submit">
+            </form>
         </main>
         <footer>               
             &copy; Emma Devens - Fall 2023
