--- a/about_page.html
+++ b/about_page.html
@@ -9,13 +9,10 @@ session_start();
     <style>
         h1 {text-align: center;}
         h2 {text-align: center;}
-        header{
-            font-size: 2em;
-        }
         body {
                 background-color: rgb(110, 243, 255);
                 font-family: Georgia, 'Times New Roman', Times, serif;
-                font-size: 1em;
+                font-size: 2em;
             }
     </style>
 </head>
@@ -25,7 +22,7 @@ session_start();
         </header>
         <main>
             <nav>
-                <a href = "login.html">Sign in</a><br>
+                <h6><a href = "login.html">Sign in</a></h6>
             </nav>
             <div>&nbsp</div>
             <img src="https://th.bing.com/th/id/R.dc919a624d5fbc87fad6d5f1aa82e944?rik=1GjJKBrQ%2fwKW6g&riu=http%3a%2f%2fbeyondtheclassroom.wikidot.com%2flocal--files%2femily-gohs%2fwriting.jpg&ehk=3uv3Ty0FVUvpIMQHkvPbA4eLmmai6EZbkWUv5gdXOsM%3d&risl=&pid=ImgRaw&r=0" alt="Image of a diary" height="300">
