--- a/viewSubmissions.html
+++ b/viewSubmissions.html
@@ -139,6 +139,7 @@ include("viewSubmissions.php");
             </table>
             </table>
             <h3>Enter a date to search for previous entries</h3>
+            <h3>Enter Date as mm/dd/yyyy</h3>
             <!--I don't know what action to have-->
             <form action="" method="post">
                 Enter Date: <input type="text" name="username">
