--- a/viewSubmissions.html
+++ b/viewSubmissions.html
@@ -1,7 +1,8 @@
-<?php
+<!--
+    <?php
 session_start();
-include("viewSubmissions.php");
-?>
+//include("viewSubmissions.php");
+?> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,79 +69,63 @@ include("viewSubmissions.php");
             <br>
             <br>
             <br>
-            <table>>
+            <?php
+
+                $dbhost = "localhost";
+                $dbuser = "admin";
+                $dbpass = "DbPassword123";
+                $dbname = "diary_data_test";
+                $mysqli = new mysqli($dbhost, $dbuser, $dbpass,$dbname);
+
+                $sql = "SELECT * FROM diary_entries";
+                $result = mysqli_queryquery($mysqli,$sql);
+
+            ?>
+            <table>
                 <thead>
                     <tr>
-                    <th>Date</th>
-                    <th>Feel</th>
-                    <th>Productivity</th>
-                    <th>Stress</th>
-                    <th>Sleep</th>
-                    <th>Weater</th>
-                    <th>Exercise</th>
-                    <th>Good Thing</th>
-                    <th>Eating</th>
-                    <th>Do Better</th>
-                    <th>Custom</th>
+                        <th>Date</th>
+                        <th>Feel</th>
+                        <th>Productivity</th>
+                        <th>Stress</th>
+                        <th>Sleep</th>
+                        <th>Weater</th>
+                        <th>Exercise</th>
+                        <th>Good Thing</th>
+                        <th>Eating</th>
+                        <th>Do Better</th>
+                        <th>Custom</th>
+                    </tr>
                 </thead>
                 <tbody>
                     <!-- PHP CODE TO FETCH DATA FROM ROWS https://www.geeksforgeeks.org/how-to-fetch-data-from-localserver-database-and-display-on-html-table-using-php/# -->
-                    <?php 
-                        // LOOP TILL END OF DATA
-                        echo $result
-                        while($rows=$result->fetch_assoc())
-                        {
-                    ?>
-                        <tr>
-                            <!-- FETCHING DATA FROM EACH
-                                ROW OF EVERY COLUMN -->
-                            <td><?php echo $rows['username'];?></td>
-                            <td><?php echo $rows['problems'];?></td>
-                            <td><?php echo $rows['score'];?></td>
-                            <td><?php echo $rows['articles'];?></td>
-
-                            <td><?php echo $data['date'];?></td>
-                            <td><?php echo $data['how_feeling'];?></td>
-                            <td><?php echo $data['productivity'];?></td>
-                            <td><?php echo $data['stress'];?></td>
-                            <td><?php echo $data['sleep'];?></td>
-                            <td><?php echo $data['weather'];?></td>
-                            <td><?php echo $data['exercise'];?></td>  
-                            <td><?php echo $data['good_things'];?></td>
-                            <td><?php echo $data['eating'];?></td>  
-                            <td><?php echo $data['make_better'];?></td>
-                            <td><?php echo $data['custom_comments'];?></td>  
-                        </tr>
                     <?php
+                        while ($row = mysqli_fetch_array($query)) {
+                            echo "<tr>";
+                            echo "<td>".$row[date]."</td>";
+                            echo "<td>".$row[how_feeling]."</td>";
+                            echo "<td>".$row[productivity]."</td>";
+                            echo "<td>".$row[stress]."</td>";
+                            echo "<td>".$row[sleep]."</td>";
+                            echo "<td>".$row[weather]."</td>";
+                            echo "<td>".$row[exercise]."</td>";
+                            echo "<td>".$row[good_things]."</td>";
+                            echo "<td>".$row[eating]."</td>";
+                            echo "<td>".$row[make_better]."</td>";
+                            echo "<td>".$row[custom_comments]."</td>";
+                            echo "</tr>";
+
                         }
+
                     ?>
                     
-                    <!--
-                    <?php
-                        if(is_array($fetchData)){      
-                        $sn=1;
-                        foreach($fetchData as $data){
-                    ?>
-                    <tr>
-                        <td><?php echo $data['date']??''; ?></td>
-                        <td><?php echo $data['how_feeling']??''; ?></td>
-                        <td><?php echo $data['productivity']??''; ?></td>
-                        <td><?php echo $data['stress']??''; ?></td>
-                        <td><?php echo $data['sleep']??''; ?></td>
-                        <td><?php echo $data['weather']??''; ?></td>
-                        <td><?php echo $data['exercise']??''; ?></td>  
-                        <td><?php echo $data['good_things']??''; ?></td>
-                        <td><?php echo $data['eating']??''; ?></td>  
-                        <td><?php echo $data['make_better']??''; ?></td>
-                        <td><?php echo $data['custom_comments']??''; ?></td>  
-                    </tr>
-                    -->
+                    
                 </tbody>
             </table>
             </table>
             <h3>Enter a date to search for previous entries</h3>
             <!--I don't know what action to have-->
-            <form action="" method="post">
+            <form action="viewSubmissions.php" method="post">
                 Enter Date: <input type="text" name="username">
                 <input type="submit">
             </form>
